fix: change z-index sidebar

--- a/src/style/components.css
+++ b/src/style/components.css
@@ -97,7 +97,7 @@ a {
     border-radius: 0rem 5rem 5rem 0;
     height: 86vh;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     overflow-x: hidden;
 }
 .sidebar h2 {
@@ -381,6 +381,7 @@ td a {
     object-fit: cover;
     border-radius: 0.5rem;
     border: solid 2px #001d3d44;
+    z-index: 1;
     @media (max-width: 800px) {
         margin-right: 0;
         border-radius: 100%;
